@@ -7,6 +7,7 @@
 	* Add new manual
 	* Small manual update
 	* Update dependency to correct version 4.5.4
+	* Usability fix: Button on settings form on every tab
 
 2011-11-11 Daniel Alder <dalder@snowflake.ch>
 
